# openwhoop

./: .env.example  .gitignore  README.md  RESEARCH.md  pyproject.toml
openwhoop/: __init__.py  cli.py  config.py  models.py
openwhoop/algos/: activity.py  hrv.py  sleep.py  sleep_consistency.py  spo2.py  strain.py  stress.py  temperature.py
openwhoop/ble/: client.py  handlers.py  scanner.py
openwhoop/db/: database.py  schema.py
openwhoop/protocol/: assembler.py  constants.py  crc.py  decoder.py  packet.py
tests/: conftest.py  test_algorithms.py  test_crc.py  test_db.py  test_decoder.py  test_packet.py
